# bixi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml  release.yml
bixi/: __init__.py  bixi.py
docs/: api.rst  conf.py  index.rst  requirements.txt
