[project]
name = "bixi-sdk"
dynamic = ["version"]
description = "Bixi - Bixi API client"
authors = [
    { name = "Renaud Bourassa", email = "rbourassadenis@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "gql[requests]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "pre-commit",
    "bump-my-version",
]

[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "bixi.__version__" }

[tool.bumpversion]
current_version = "0.0.2"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "bixi/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
include = [ "bixi/" ]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "error"
