[project]
name = "bixi-sdk"
dynamic = ["version"]
description = "Bixi - Bixi API client"
authors = [
    { name = "Renaud Bourassa", email = "rbourassadenis@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "gql[requests]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "pre-commit",
]

[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
include = [ "bixi/" ]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "error"
