[project]
name = "bixi-sdk"
dynamic = ["version"]
description = "Bixi - Bixi API client"
authors = [
    { name = "Renaud Bourassa", email = "rbourassadenis@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["bixi", "bike-share", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "gql[requests]",
]

[project.urls]
Homepage = "https://github.com/renaudb/bixi"
Repository = "https://github.com/renaudb/bixi"
Issues = "https://github.com/renaudb/bixi/issues"
Documentation = "https://bixi.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "pre-commit",
]

[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
include = [ "bixi/" ]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "error"
